CHANGES.txt - 12/28/2001
------------------------

CHANGES IN CUPS V1.2.0a1

	- New ippReadFile(), ippReadIO(), ippWriteFile(), and
	  ippWriteIO() functions in CUPS API.


CHANGES IN CUPS V1.1.13

	- The cups-lpd mini-daemon now supports LPD clients that
	  send multiple control files.
	- httpConnectEncrypt() now always uses encryption for
	  connections on port 443, since port 443 is reserved
	  for the "https" scheme.
	- Group authentication via certificates did not work
	  from the web interface for accounts other than
	  "root".	
	- The serial port backend did not clear the OPOST
	  option, which could cause problems with some printers.
	- The cups-lpd mini-daemon didn't lookup the client IP
	  address properly.
	- The parallel backend now identifies the polled and
	  interrupt-driven devices under *BSD.
	- The scheduler allowed the "always" encryption mode
	  inside a Location, which is not valid.
	- The CUPS startup script now checks for the timezone
	  information under Linux.
	- Now also map the sides attribute to the JCLDuplex
	  option (if present) in PPD files.
	- Updated pdftops to Xpdf 0.93a.
	- Added support for MD5 passwords under Slackware.
	- Added new AuthType BasicDigest that does Basic
	  authentication using the MD5 password file managed by
	  the lppasswd command.
	- The banner page attribute substitution code now
	  retains {name} sequences in banner files when the
	  named attribute is undefined.  Use {?name} to
	  conditionally substitute an IPP attribute.
	- The scheduler now ensures that the ServerRoot
	  directory and configuration files are owned by and
	  writable by the User and Group in cupsd.conf.
	- The USB backend now lists all USB printer devices
	  regardless of whether a printer is connected or not. 
	  This allows new USB printers to be connected without
	  restarting cupsd.
	- Added some more minor performance tweeks to the IPP
	  protocol code to reduce copying and array indexing.